[tool.poetry]
name = "HarborLocker API"
version = "0.2.0"
description = ""
authors = ["Dardo Sordi <dardo@theluxergroup.com>", "Maximiliano Torres <maximilianotorres@theluxergroup.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.14.0"
fastapi = "^0.65.2"
python-multipart = "^0.0.5"
email-validator = "^1.1.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^7.0.0"
pydantic = "^1.8.2"
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "^20.1.0"
jinja2 = "^3.0.1"
psycopg2-binary = "^2.8.6"
alembic = "^1.6.5"
sqlalchemy = "^1.4.17"
pytest = "^6.2.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-utils = "^0.2.1"
cbor2 = "^5.4.0"
Faker = "^8.8.2"
pyhumps = "^3.0.2"
timeflake = "^0.4.0"
pyotp = "^2.6.0"
motor = "^2.5.1"
dramatiq = {extras = ["redis", "watch"], version = "^1.11.0"}

[tool.poetry.dev-dependencies]
mypy = "^0.901"
black = "^21.5b2"
isort = "^5.8.0"
autoflake = "^1.4"
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"
sqlalchemy = {extras = ["mypy"], version = "^1.4.17"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
